# oppo-live-photo-maker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  exiftool_oppo.config  main.py  pyproject.toml  run_gui.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
backend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/src/: copyImgMeta.ts  editMetadata.ts  exiftoolCli.ts  exiv2Copy.ts  exiv2Module.ts  health.ts  postCopyPipeline.ts  server.ts
backend/test/: colorOsExifPatch.test.ts  colorOsExifRealign.test.ts  copyOutput2.test.ts  postCopyPipeline.test.ts
docs/: metadata-copy-analysis.md  oppo-find-x8-metadata-reference.md
scripts/: check-env.ps1  check-env.sh  conv-workflow.ps1  copy-img-meta.cmd  copy-img-meta.ps1  install-copy-img-meta.ps1  setup-copy-img-meta.ps1  setup-exiftool.ps1  setup-heic.ps1  start-backend.ps1  start-dev.ps1
shared/metadata/: bundleToExiftoolArgs.d.ts  bundleToExiftoolArgs.ts  colorOsExifPatch.d.ts  colorOsExifPatch.offset.test.ts  colorOsExifPatch.ts  colorOsValidate.d.ts  colorOsValidate.ts  copyContract.d.ts  copyContract.ts  detectFormat.d.ts  detectFormat.ts  exifByteOrder.d.ts  exifByteOrder.ts  index.ts  jpegDimensions.d.ts  jpegDimensions.ts  jpegTail.d.ts  jpegTail.ts  minimalJpeg.d.ts  minimalJpeg.ts  motionPhotoXmp.d.ts  motionPhotoXmp.test.ts  motionPhotoXmp.ts  package.json  segmentCopySync.d.ts  segmentCopySync.ts  segments.d.ts  segments.ts
src/: cli.py  ffmpeg_utils.py  gui.py  muxer.py
src/oppo_live_photo/: __init__.py  cli.py  copy_img_meta_cli.py  ffmpeg_utils.py  gexiv2_copy.py  gui.py  gui_styles.py  jpeg_segment_copy.py  metadata.py  muxer.py  server.py
src/oppo_live_photo/data/: exiftool_oppo.config
tests/: conftest.py  test_cli_e2e.py  test_copy_output2.py  test_jpeg_scanner.py  test_jpeg_tail.py  test_metadata.py  test_mpf_segment.py  test_server.py
tools/: _gen_jpeg_segment.py  fix_gexiv2_syntax.py  fix_readme_fence.py  patch_gexiv2_copy.py  patch_readme.py  patch_start_dev.py  write_modules.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/scripts/: compare-output2.mjs
web/src/: App.vue  ConverterPage.vue  OppoExclusive.vue  heic2any.d.ts  piexifjs.d.ts  router.ts  style.css
web/src/assets/: exiftool.pl
web/src/components/: ExportStep.vue  LivePhotoView.vue  MetadataCopyView.vue  MetadataEditor.vue  MetadataSourceStep.vue  ReferenceStep.vue  SourceMetadataEditView.vue  SourceMetadataPanel.vue  StepIndicator.vue  VideoStep.vue
web/src/lib/: muxer.test.ts  muxer.ts  webcodecs.ts  zipDownload.test.ts  zipDownload.ts
web/src/lib/metadata/: apply.ts  backendCopy.test.ts  backendCopy.ts  colorOsExif.test.ts  colorOsExif.ts  colorOsExifPatch.test.ts  copyContract.test.ts  copyContract.ts  copyMeta.test.ts  copyMeta.ts  copyWritableTags.resync.test.ts  copyWritableTags.test.ts  copyWritableTags.ts  detectLivePhotoTarget.test.ts  detectLivePhotoTarget.ts  editMetadata.ts  exifByteOrder.ts  exiftoolCopy.ts  exiftoolDebug.ts  exiftoolQueue.ts  exiftoolWasmRunner.ts  fields.ts  heic.ts  imageFormat.test.ts  imageFormat.ts  imageToJpeg.ts  index.ts  jpegTail.test.ts  jpegTail.ts  metadata.test.ts  metadataTemplate.ts  nativeMux.ts  parse.test.ts  parse.ts  presentation.test.ts  presentation.ts  referenceLoad.ts  segmentCopy.test.ts  segmentCopy.ts  segments.ts  (+7 more)
