[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oppo-live-photo-maker"
version = "0.1.1"
description = "Convert any video into an OPPO MotionPhoto (Live Photo) JPEG."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "chaseZ" }]
keywords = ["oppo", "motionphoto", "live-photo", "jpeg", "mp4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
oppo-live = "oppo_live_photo.cli:main_entry"

[project.gui-scripts]
oppo-live-gui = "oppo_live_photo.gui:main"

[project.urls]
Homepage = "https://github.com/NewbieCheng/oppo-live-photo-maker"
Issues = "https://github.com/NewbieCheng/oppo-live-photo-maker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oppo_live_photo"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
